<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh">
    </item>
    <item
        android:id="@+id/action_person"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="ifRoom"
        android:title="@string/action_person">
    </item>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="ifRoom"
        android:title="@string/action_new">
    </item>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/logout">
    </item>

</menu>