<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/photo_label"
        android:textSize="20sp" />

    <com.parse.ParseImageView
        android:id="@+id/photo_preview"
        android:layout_width="wrap_content"
        android:layout_height="512dp"
        android:layout_gravity="center_horizontal" />

    <!--     <ImageButton -->
    <!--         android:id="@+id/camera_button" -->
    <!--         android:layout_width="match_parent" -->
    <!--         android:layout_height="wrap_content" -->
    <!--         android:src="@drawable/ic_action_photo" /> -->

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />


</LinearLayout>